--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header class="hero">
+      <div class="banner">
+        <h1>MODAL</h1>
+        <button class="btn modal-btn">Click to Open</button>
+      </div>
+    </header>
+    <div class="modal-overlay">
+      <div class="modal-container">
+        <h3>Opened</h3>
+        <button class="close-btn">
+          <i class="fas fa times"></i>
+        </button>
+      </div>
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
