--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="modal-container">
         <h3>Opened</h3>
         <button class="close-btn">
-          <i class="fas fa times"></i>
+          <i class="fas fa-times"></i>
         </button>
       </div>
     </div>
